Fix ace editor integration if no partial given.
Starcounter/RebelsLounge/issues/32
Starcounter/EpicDemo/issues/12

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -87,7 +87,8 @@ version: 0.0.0
                 },
                 content: {
                     type: String,
-                    observer: '_contentChanged'
+                    observer: '_contentChanged',
+                    value: ''
                 }
             },
 
@@ -97,7 +98,7 @@ version: 0.0.0
                     this.content = this.partial.compositionElement.shadowRoot && this.partial.compositionElement.shadowRoot.innerHTML || '';
                     this.set('disabled', false);
                 } else {
-                    this.content = null;
+                    this.content = '';
                     this.set('disabled', true);
                 }
             },
