Enable line wrapping for ace editor

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -51,7 +51,8 @@ version: 0.0.0
                 style="height: 100%;"
                 mode="ace/mode/html"
                 readonly$="{{disabled}}"
-                value="{{content::change}}"></juicy-ace-editor>
+                value="{{content::change}}"
+                wrapmode="true"></juicy-ace-editor>
         </div>
         <div id="buttons">
             <button on-click="revert" disabled$="{{disabled}}">Revert</button>
