Implement restore default layout feature
Starcounter/RebelsLounge/issues/32

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -133,8 +133,14 @@ version: 0.0.0
                 return this.partial && this.partial.saveLayout();
             },
             restore: function () {
-                // TODO:
-                console.warn('Default layouts are not yet implemented!');
+                if (!this.partial) {
+                    return false;
+                }
+                // TODO: move editing features from partial to here
+                this.partial._forceLayoutChange = true;
+                this.partial._compositionChanged("");
+                return this.set('content',this.partial.compositionElement.shadowRoot && this.partial.compositionElement.shadowRoot.innerHTML || '');
+
             },
             revert: function () {
                 if (!this.partial) {
