Rename the "Revert" button to "Cancel" (closes #1)

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -61,7 +61,7 @@ version: 0.0.0
                 wrapmode="true"></juicy-ace-editor>
         </div>
         <div id="buttons">
-            <button on-click="revert" disabled$="{{disabled}}">Revert</button>
+            <button on-click="revert" disabled$="{{disabled}}">Cancel</button>
             <button on-click="restore" disabled$="{{disabled}}">Restore default</button>
             <button on-click="save" disabled$="{{disabled}}">Save</button>
         </div>
