Add integration with browser's dev tools

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -64,6 +64,7 @@ version: 0.0.0
             <button on-click="revert" disabled$="{{disabled}}">Cancel</button>
             <button on-click="restore" disabled$="{{disabled}}">Restore default</button>
             <button on-click="save" disabled$="{{disabled}}">Save</button>
+            <label><input type="checkbox" checked="{{observeMutations::change}}" disabled$="{{disabled}}"/>Observe Shadow DOM mutations / I'll use browser's dev tools</label>
         </div>
         <p>
             To distribute the content use
@@ -71,9 +72,14 @@ version: 0.0.0
             where <code><em>id</em></code> is the index or given custom slot id</p>
     </template>
 
-    <!-- Registers custom element -->
     <script>
     (function () {
+        const OBSERVER_INIT = {
+            childList: true,
+            attributes: true,
+            characterData: true,
+            subtree: true
+        };
         Polymer({
             is: 'starcounter-layout-html-editor',
 
@@ -100,6 +106,15 @@ version: 0.0.0
                 knownSelectors: {
                     type: Array,
                     value: []
+                },
+                /**
+                 * Should mutations made to composition made by 3rd party be observed?
+                 * @type {Object}
+                 */
+                observeMutations: {
+                    type: Boolean,
+                    observer: '_updateObserver',
+                    value: false
                 }
             },
 
@@ -112,14 +127,42 @@ version: 0.0.0
                     this.content = '';
                     this.set('disabled', true);
                 }
+                this._updateObserver();
             },
             _contentChanged: function (newVal, oldVal) {
                 if (this.partial && this.partial.compositionElement && this.disabled === false) {
+                    // stop observing mutations
+                    this.observer.disconnect();
                     this.partial.compositionElement.composition = this.partial.stringToDocumentFragment(newVal);
+                    // start observing mutations if needed
+                    this._updateObserver();
                 }
             },
-            // Fires when an instance of the element is created
+            /**
+             * Connects or disconnects the mutation observer according to required properties
+             */
+            _updateObserver: function(){
+                if(this.observeMutations && this.partial){
+                    this.observer.observe(this.partial.compositionElement.shadowRoot, OBSERVER_INIT);
+                    // propt developer-firendly message, with a reference to the observed Shadow DOM
+                    console.info('starcounter-layout-html-editor (', this,
+                        ') is now observing all the mutations made to partials Shadow DOM, feel free to change it with your browser\'s dev tools.',
+                        this.partial.compositionElement.shadowRoot);
+                } else {
+                    this.observer.disconnect();
+                }
+
+            },
+            /**
+             * Creates an observer for external changes made to composition, to notify the editor
+             */
             created: function () {
+                const editor = this;
+                // create an observer
+                this.observer = new MutationObserver(function shadowDOMChanged(mutations){
+                    // notify Polymer's data binding
+                    editor.set('content', editor.partial.compositionElement.shadowRoot && editor.partial.compositionElement.shadowRoot.innerHTML || '')
+                });
             },
 
             // Fires when the local DOM has been fully prepared
