--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </style>
 </head>
 <body class="markdown-body">
-    <a href="https://github.com/Starcounter/starcounter-layout-html-editor"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
+    <a href="https://github.com/Starcounter/starcounter-layout-html-editor"><img style="position: absolute; top: 0; right: 0; border: 0; z-index: 2" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
     <h1>&lt;starcounter-layout-html-editor&gt;</h1>
     <blockquote>
         <p>Custom Element with Ace editor to change Starcounter's layouts</p>
