Changed the checkmark to two rects
IE didn't like my path, so I
re-drew the checkmark into to
rects without any rotataion.
now works like a charm on IE, FF
and Chrome.

--- a/juicy-simple-visual-html-editor.html
+++ b/juicy-simple-visual-html-editor.html
@@ -65,10 +65,6 @@ version: 0.0.0
             {
                fill: #009029
             }
-            #set-width-btn
-            {
-                fill: #Fcc
-            }
         </style>
         <div id="tree-and-tools">
             <div class="toolkit-ui">
@@ -113,8 +109,10 @@ version: 0.0.0
                         <input type="number" placeholder="0px" required min="0" max="100000" id="width-value">
                         <!-- use this button events to save width -->
                         <button id="set-width-btn">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px" viewBox="0 0 512 380">
-                                <path style="transform-origin: 50% 50%; transform: scale(1, -1)" d="M393 293c5 -5 5 -13 0 -18l-250 -250c-2 -2 -6 -4 -9 -4v1l-1 -1c-3 0 -6 2 -8 4l-121 121c-2 2 -4 6 -4 9s2 7 4 9l66 66c5 5 12 5 17 0l47 -47l176 176c2 2 5 4 8 4s7 -2 9 -4z"></path>
+                            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                viewBox="0 0 16 16" style="enable-background:new 0 0 16 16;" xml:space="preserve">
+                                <rect x="2.6" y="6.8" transform="matrix(0.7948 -0.6068 0.6068 0.7948 -5.1764 4.4947)" width="2.9" height="6.2"/>
+                                <rect x="5.1" y="5.7" transform="matrix(0.7948 -0.6068 0.6068 0.7948 -2.3188 7.6099)" width="9.9" height="3.1"/>
                             </svg>
                         </button>
                     </span>
