Update styles after #9
Display juicy-simple-visual-html-editor as flex

Starcounter/starcounter-layout-html-editor/issues/5
Starcounter/EpicDemo/issues/14

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -51,8 +51,8 @@ version: 0.0.0
             #editor-area >[disabled]{
                 opacity: 0.35;
             }
-            juicy-dom-tree-view{
-                --juicy-dom-tree-selected-background-color: rgba(30, 144, 255, 0.5);
+            juicy-simple-visual-html-editor{
+                height: 100%;
             }
         </style>
         <label class="partial-picker">
