--- a/juicy-simple-visual-html-editor.html
+++ b/juicy-simple-visual-html-editor.html
@@ -13,16 +13,18 @@ version: 0.0.0
 <dom-module id="juicy-simple-visual-html-editor">
     <template>
         <style>
-            :host{
-                min-height: 1em;
-                display: flex;
-                flex-direction: column;
+           juicy-dom-tree-view{
+                height: calc(100% - 35px);
+                overflow: auto;
+                --juicy-dom-tree-selected-background-color: rgba(30, 144, 255, 0.5);
+                border: none; /* override original css */
+                border-top: 1px solid #ccc;
             }
             .toolkit-ui
             {
                 padding: 2px 2px;
                 background-color: #fefefe
-            }
+            } 
             #resize-area-hidden input
             {
                 width: 60px;
@@ -31,7 +33,7 @@ version: 0.0.0
                 border-radius: 3px;
                 border: solid 1px #999;
                 outline: none;
-            }
+            }    
             #resize-area-hidden
             {
                 opacity: 0;
@@ -51,59 +53,57 @@ version: 0.0.0
                 padding: 6px;
                 fill: #444;
             }
+            .toolkit-ui button line
+            {
+                stroke: indianred;
+            }
             .toolkit-ui button:hover
             {
-                background: #ccc;
+                 background: #ccc;
             }
             .toolkit-ui button:active
             {
-                background: #AAF;
+                 background: #AAF;
             }
             #width-value:valid + #set-width-btn
             {
-                fill: #009029
-            }
-            juicy-dom-tree-view{
-                --juicy-dom-tree-selected-background-color: rgba(30, 144, 255, 0.5);
-                border: none; /* override original css */
-                border-top: 1px solid #ccc;
-                flex: 1 0 1em;
-                overflow: auto;
+               fill: #009029
             }
         </style>
         <div class="toolkit-ui">
             <!-- for easier IntelliSense, everything is prefixed with btn -->
-            <button id="btn-move-up" title="Move selected node upword inside its parent node">
+            <button title="Move selected node upword inside its parent node">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                 <path d="M2 188c-3 4 -3 9 -1 13s7 7 12 7h62v167c0 7 6 13 13 13h116c7 0 12 -6 12 -13v-167h63c5 0 9 -3 11 -7s2 -9 -1 -13l-132 -187c-2 -3 -7 -5 -11 -5v0c-4 0 -8 2 -10 5z"></path>
                 </svg>
             </button>
-            <button id="btn-move-down" title="Move selected node downward inside its parent node">
+            <button title="Move selected node downward inside its parent node">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                     <path d="M289 196c3 -4 3 -9 1 -13s-6 -7 -11 -7h-63v-167c0 -7 -5 -13 -12 -13h-116c-7 0 -13 6 -13 13v167h-62c-5 0 -10 3 -12 7s-2 9 1 13l133 187c2 3 6 5 10 5v0c4 0 9 -2 11 -5z"></path>
                 </svg>
             </button>
-            <button id="btn-move-outside" title="Jump selected node upword to outsite its parent node">
+            <button title="Jump selected node upword to outsite its parent node">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                     <path d="M192 335c4 3 9 3 13 1s7 -6 7 -11v-62h168c7 0 13 -6 13 -13v-116c0 -7 -6 -13 -13 -13h-168v-62c0 -5 -3 -9 -7 -11s-9 -2 -13 1l-187 132c-3 2 -5 7 -5 11v0c0 4 2 8 5 10z"></path>
                 </svg>
             </button>
-            <button id="btn-show-hide" title="Hide node" on-click="hideElements">
+            <button title="Hide node" on-click="hideElements">
+                <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
+                    <path d="M359 204c4 -2 6 -6 6 -11c0 -4 -2 -8 -4 -10v0v0l-1 -1l-79 -79v0c-24 -27 -60 -44 -99 -44c-35 0 -66 14 -90 36v-1l-87 87c-3 3 -5 7 -5 11c0 3 1 7 3 9v0l80 79c24 27 60 45 99 45c35 0 67 -14 91 -36v1zM182 102c50 0 90 40 90 90s-40 90 -90 90s-90 -40 -90 -90 s40 -90 90 -90zM139 192c0 29 14 43 43 43s44 -14 44 -43s-15 -44 -44 -44s-43 15 -43 44z"></path>
+                    <line stroke-width="50" x1="300" y1="0" x2="60" y2="350"/>
+                </svg>
+            </button>
+            <button title="Show node" on-click="showElements">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
                     <path d="M359 204c4 -2 6 -6 6 -11c0 -4 -2 -8 -4 -10v0v0l-1 -1l-79 -79v0c-24 -27 -60 -44 -99 -44c-35 0 -66 14 -90 36v-1l-87 87c-3 3 -5 7 -5 11c0 3 1 7 3 9v0l80 79c24 27 60 45 99 45c35 0 67 -14 91 -36v1zM182 102c50 0 90 40 90 90s-40 90 -90 90s-90 -40 -90 -90 s40 -90 90 -90zM139 192c0 29 14 43 43 43s44 -14 44 -43s-15 -44 -44 -44s-43 15 -43 44z"></path>
                 </svg>
             </button>
-            <button id="btn-show-hide" title="Show node" on-click="showElements">
-                <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 -20 300 400">
-                    <path d="M359 204c4 -2 6 -6 6 -11c0 -4 -2 -8 -4 -10v0v0l-1 -1l-79 -79v0c-24 -27 -60 -44 -99 -44c-35 0 -66 14 -90 36v-1l-87 87c-3 3 -5 7 -5 11c0 3 1 7 3 9v0l80 79c24 27 60 45 99 45c35 0 67 -14 91 -36v1zM182 102c50 0 90 40 90 90s-40 90 -90 90s-90 -40 -90 -90 s40 -90 90 -90zM139 192c0 29 14 43 43 43s44 -14 44 -43s-15 -44 -44 -44s-43 15 -43 44z"></path>
-                </svg>
-            </button>
-            <button id="btn-insert" title="Insert a new container">
+            <button title="Insert a new container">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="45 -20 300 400">
                     <path d="M362 245c5 0 9 -5 9 -10v-86c0 -3 -1 -5 -3 -7s-3 -3 -6 -3h-124v-123c0 -2 -1 -5 -3 -7s-4 -3 -6 -3h-87c-2 0 -4 1 -6 3s-3 5 -3 7v123h-124c-2 0 -4 1 -6 3s-3 5 -3 7v86c0 5 4 10 9 10h124v123c0 5 4 10 9 10h87c5 0 9 -5 9 -10v-123h124z"></path>
                 </svg>
             </button>
-            <button id="btn-delete" title="Delete selected node">
+            <button title="Delete selected node">
                 <svg x="0px" y="0px" width="16px" height="16px" viewBox="0 0 300 400">
                     <rect x="0" y="150" width="300" height="100">
                 </svg>
