WIP: Implement basic hiding and moving out
Starcounter/starcounter-layout-html-editor/issues/5
Starcounter/starcounter-layout-html-editor/issues/6
Starcounter/EpicDemo/issues/14

--- a/starcounter-layout-html-editor.html
+++ b/starcounter-layout-html-editor.html
@@ -167,8 +167,9 @@ version: 0.0.0
                     }
                     // workaround Polymer's buggy dirty checking and
                     // appendChild(documentFragment)-like behavior of composition setter
-                    this.notifyPath('partial.compositionElement.composition', this.partial.stringToDocumentFragment(event.target.value));
-                    this.partial.compositionElement.composition = this.partial.stringToDocumentFragment(event.target.value);
+                    var newComposition = this.partial.stringToDocumentFragment(event.target.value);
+                    this.notifyPath('partial.compositionElement.composition', newComposition);
+                    this.partial.compositionElement.composition = newComposition;
                 },
                 _compositionChanged: function(newVal, oldVal, stopPropagation) {
                     return;
